add password login
